name:                pure-router
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-router
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    ef >= 3 && < 4,
    pure-core >= 0.7 && < 1,
    pure-default >= 0.7 && < 1,
    pure-events >= 0.7 && < 1,
    pure-html >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    excelsior >= 0.7 && < 1

  hs-source-dirs: src

  exposed-modules:
    Pure.Router
    Pure.Router.Internal

  default-language: Haskell2010