name:                pure-router
version:             0.8.0.0
homepage:            purehs.org/doc/pure-router
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-router.git

library
  build-depends:
    base,
    pure-core,
    pure-default,
    pure-events,
    pure-html,
    pure-lifted,
    pure-txt,
    pure-uri,
    excelsior,
    mtl,
    containers

  hs-source-dirs: src

  exposed-modules:
    Pure.Router
    Pure.Router.Internal

  default-language: Haskell2010
